# fast-search

./: .gitignore  Cargo.toml  README.md  fix_names.sh  icon.icns  package.json  使用说明.txt
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
